adding data and dependecies

--- a/main.ipynb
+++ b/main.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected=covid_data[[\"country\",\"people_fully_vaccinated\"]]\n",
-    "selected.groupby(\"country\").sum()"
+    "selected=covid_data[[\"country\",\"iso_code\",\"people_fully_vaccinated\"]]\n",
+    "selected.groupby([\"country\",\"iso_code\"]).sum().head()"
    ]
   }
  ],
