--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "64ba2337",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Adding dependecies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -14,10 +15,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c38862eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_vaccinations</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>daily_vaccinations_raw</th>\n",
+       "      <th>daily_vaccinations</th>\n",
+       "      <th>total_vaccinations_per_hundred</th>\n",
+       "      <th>people_vaccinated_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>daily_vaccinations_per_million</th>\n",
+       "      <th>vaccines</th>\n",
+       "      <th>source_name</th>\n",
+       "      <th>source_website</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country iso_code        date  total_vaccinations  people_vaccinated  \\\n",
+       "0  Afghanistan      AFG  2021-02-22                 0.0                0.0   \n",
+       "1  Afghanistan      AFG  2021-02-23                 NaN                NaN   \n",
+       "2  Afghanistan      AFG  2021-02-24                 NaN                NaN   \n",
+       "3  Afghanistan      AFG  2021-02-25                 NaN                NaN   \n",
+       "4  Afghanistan      AFG  2021-02-26                 NaN                NaN   \n",
+       "\n",
+       "   people_fully_vaccinated  daily_vaccinations_raw  daily_vaccinations  \\\n",
+       "0                      NaN                     NaN                 NaN   \n",
+       "1                      NaN                     NaN              1367.0   \n",
+       "2                      NaN                     NaN              1367.0   \n",
+       "3                      NaN                     NaN              1367.0   \n",
+       "4                      NaN                     NaN              1367.0   \n",
+       "\n",
+       "   total_vaccinations_per_hundred  people_vaccinated_per_hundred  \\\n",
+       "0                             0.0                            0.0   \n",
+       "1                             NaN                            NaN   \n",
+       "2                             NaN                            NaN   \n",
+       "3                             NaN                            NaN   \n",
+       "4                             NaN                            NaN   \n",
+       "\n",
+       "   people_fully_vaccinated_per_hundred  daily_vaccinations_per_million  \\\n",
+       "0                                  NaN                             NaN   \n",
+       "1                                  NaN                            35.0   \n",
+       "2                                  NaN                            35.0   \n",
+       "3                                  NaN                            35.0   \n",
+       "4                                  NaN                            35.0   \n",
+       "\n",
+       "                                          vaccines                source_name  \\\n",
+       "0  BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech  World Health Organization   \n",
+       "1  BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech  World Health Organization   \n",
+       "2  BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech  World Health Organization   \n",
+       "3  BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech  World Health Organization   \n",
+       "4  BBIBP-CorV, Oxford/AstraZeneca, Pfizer/BioNTech  World Health Organization   \n",
+       "\n",
+       "             source_website  \n",
+       "0  https://covid19.who.int/  \n",
+       "1  https://covid19.who.int/  \n",
+       "2  https://covid19.who.int/  \n",
+       "3  https://covid19.who.int/  \n",
+       "4  https://covid19.who.int/  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "covid_data=pd.read_csv(\"data/country_vaccinations.csv\")\n",
     "covid_data.head()"
@@ -25,13 +208,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "869ef7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>0.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>12.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>21.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>656</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         country  people_fully_vaccinated_per_hundred\n",
+       "112  Afghanistan                                 0.46\n",
+       "274      Albania                                12.68\n",
+       "403      Algeria                                  NaN\n",
+       "544      Andorra                                21.25\n",
+       "656       Angola                                 1.56"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population_vacc=covid_data[[\"country\",\"people_fully_vaccinated_per_hundred\"]].drop_duplicates(subset=['country'], keep=\"last\")\n",
+    "population_vacc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "67272164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>1203555.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>8446939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>67309.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>2498465.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             people_fully_vaccinated\n",
+       "country                             \n",
+       "Afghanistan                1203555.0\n",
+       "Albania                    8446939.0\n",
+       "Algeria                          0.0\n",
+       "Andorra                      67309.0\n",
+       "Angola                     2498465.0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "selected=covid_data[[\"country\",\"iso_code\",\"people_fully_vaccinated\"]]\n",
-    "selected.groupby([\"country\",\"iso_code\"]).sum().head()"
+    "selected=covid_data[[\"country\",\"people_fully_vaccinated\"]].groupby([\"country\",]).sum()\n",
+    "selected.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6ba73c3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISO code</th>\n",
+       "      <th>%  of population vaccinated</th>\n",
+       "      <th>Number of people fully vaccinated</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>1203555.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>ALB</td>\n",
+       "      <td>12.68</td>\n",
+       "      <td>8446939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>DZA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>AND</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>67309.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>AGO</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>2498465.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ISO code  %  of population vaccinated  \\\n",
+       "Country                                             \n",
+       "Afghanistan      AFG                         0.46   \n",
+       "Albania          ALB                        12.68   \n",
+       "Algeria          DZA                          NaN   \n",
+       "Andorra          AND                        21.25   \n",
+       "Angola           AGO                         1.56   \n",
+       "\n",
+       "             Number of people fully vaccinated  \n",
+       "Country                                         \n",
+       "Afghanistan                          1203555.0  \n",
+       "Albania                              8446939.0  \n",
+       "Algeria                                    0.0  \n",
+       "Andorra                                67309.0  \n",
+       "Angola                               2498465.0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country=covid_data[\"country\"].unique()\n",
+    "iso_code=covid_data[\"iso_code\"].unique()\n",
+    "#Creating new data frame\n",
+    "countries_summary=pd.DataFrame({\"Country\":country,\n",
+    "                                \"ISO code\": iso_code,\n",
+    "                              \"%  of population vaccinated\":population_vacc[\"people_fully_vaccinated_per_hundred\"]})\n",
+    "countries_summary=countries_summary.set_index(\"Country\")\n",
+    "countries_summary[\"Number of people fully vaccinated\"]=selected[\"people_fully_vaccinated\"]\n",
+    "countries_summary.head()"
    ]
   }
  ],
