--- a/main.ipynb
+++ b/main.ipynb
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "#calulacting the sum of all people fully vaccinated in each country\n",
-    "selected=covid_data[[\"country\",\"people_fully_vaccinated\"]].groupby([\"country\",]).sum()\n",
-    "selected.head()"
+    "fully_vacc=covid_data[[\"country\",\"people_fully_vaccinated\"]].drop_duplicates(subset=['country'], keep=\"last\")\n",
+    "fully_vacc.head()"
    ]
   },
   {
@@ -67,11 +67,9 @@
     "#Creating new data frame\n",
     "countries_summary=pd.DataFrame({\"Country\":country_name,\n",
     "                                \"ISO code\": iso_code,\n",
-    "                              \"%  of population vaccinated\":population_vacc[\"people_fully_vaccinated_per_hundred\"]})\n",
-    "countries_summary=countries_summary.set_index(\"Country\")\n",
-    "countries_summary[\"Number of people fully vaccinated\"]=selected[\"people_fully_vaccinated\"]\n",
-    "countries_summary.head()\n",
-    "countries_summary.to_csv(\"Worldwide_vaccination_summary.csv\", index=True, header=True)"
+    "                              \"Population vaccinated\":population_vacc[\"people_fully_vaccinated_per_hundred\"]})\n",
+    "countries_summary[\"Number of people fully vaccinated\"]=fully_vacc[\"people_fully_vaccinated\"]\n",
+    "countries_summary.head()"
    ]
   },
   {
@@ -89,17 +87,8 @@
     "iso_code2 = [countries.get(country, 'Unknown code') for country in iso_code]\n",
     "\n",
     "countries_summary[\"ISO code\"]=iso_code2\n",
+    "countries_summary.to_csv(\"Worldwide_vaccination_summary.csv\", index=False, header=True)\n",
     "countries_summary.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27a981c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_url=\"https://maps.googleapis.com/maps/api/geocode/json?\""
    ]
   },
   {
@@ -109,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_url=\"https://maps.googleapis.com/maps/api/geocode/json?\"\n",
     "#creating google maps API call to find latitude and longitude for each country\n",
     "latitude=[]\n",
     "longtitude=[]\n",
@@ -129,50 +119,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4db75be",
+   "id": "f98d8e06",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Adding locations to dataframe\n",
     "countries_summary[\"Latitude\"]=latitude\n",
-    "countries_summary[\"Longtitude\"]=longtitude"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f98d8e06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Plotting the heatmap of Number of people fully vaccinated\n",
-    "#Configure gmaps\n",
-    "gmaps.configure(api_key=g_key)\n",
-    "#Using the Lat and Lng as locations and Number of people fully vaccinated as the weight\n",
+    "countries_summary[\"Longtitude\"]=longtitude\n",
     "\n",
-    "# Fill NaN values and convert to float\n",
+    "# Skipping NaN values\n",
     "countries=countries_summary.dropna(subset=[\"Latitude\"])\n",
     "countries.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c012b1a",
+   "cell_type": "markdown",
+   "id": "0789944a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "loc=countries[[\"Latitude\",\"Longtitude\"]]"
+    "<h2>Heatmap of Number of people fully vaccinated worldwide</h2>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2963bb78",
+   "id": "2983a057",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "loc=countries[[\"Latitude\",\"Longtitude\"]]\n",
+    "people_vacc=countries[\"Number of people fully vaccinated\"].astype(float)\n",
+    "#Plotting the heatmap of Number of people fully vaccinated\n",
+    "#Configure gmaps\n",
+    "gmaps.configure(api_key=g_key)\n",
+    "#Using the Lat and Lng as locations and Number of people fully vaccinated as the weight\n",
+    "fig = gmaps.figure()\n",
+    "# Create heat layer\n",
+    "heat_layer = gmaps.heatmap_layer(loc,weights=people_vacc, max_intensity=100000, point_radius=7)\n",
+    "\n",
+    "# Creating symbol layer\n",
+    "vacc_layer = gmaps.symbol_layer(\n",
+    "    loc, fill_color='rgba(0, 150, 0, 0.4)',\n",
+    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=3,\n",
+    "    info_box_content=[f\"Number of people fully vaccinated: {vacc}\" for vacc in people_vacc]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Add layers\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(vacc_layer)\n",
+    "# Display figure\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baf20ebe",
+   "metadata": {},
+   "source": [
+    "<h2> Heatmap of % of population fully vaccinated worldwide <h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a85c7a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "people_vacc=countries[\"Number of people fully vaccinated\"].astype(float)"
+    "loc=countries[[\"Latitude\",\"Longtitude\"]]\n",
+    "population_vacc=countries[\"Population vaccinated\"].astype(float)\n",
+    "#Plotting the heatmap of Number of people fully vaccinated\n",
+    "#Configure gmaps\n",
+    "gmaps.configure(api_key=g_key)\n",
+    "#Using the Lat and Lng as locations and Number of people fully vaccinated as the weight\n",
+    "fig = gmaps.figure()\n",
+    "# Create heat layer\n",
+    "heat_layer = gmaps.heatmap_layer(loc,weights=population_vacc, max_intensity=100, point_radius=12)\n",
+    "\n",
+    "# Add layer\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
@@ -182,10 +212,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot Heatmap\n",
-    "fig = gmaps.figure()\n",
-    "heatmap_layer = gmaps.heatmap_layer(loc,weights=people_vacc)\n",
-    "fig.add_layer(heatmap_layer)\n",
+    "# Creating symbol layer\n",
+    "pop_vacc_layer = gmaps.symbol_layer(\n",
+    "    loc,  fill_color='rgba(0, 150, 0, 0.1)',\n",
+    "    stroke_color='rgba(0, 0, 150, 0.1)',scale=1,\n",
+    "    info_box_content=[f\"Percentage of population that is fully vaccinated: {vacc}\" for vacc in population_vacc]\n",
+    ")\n",
+    "# Add layers\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(pop_vacc_layer)\n",
+    "# Display figure\n",
     "fig"
    ]
   }
