UK analysis line graphs and scatter plot

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,8 @@
     "import pycountry\n",
     "import requests\n",
     "import json\n",
-    "import gmaps"
+    "import gmaps\n",
+    "import gmaps.geojson_geometries"
    ]
   },
   {
@@ -162,7 +163,7 @@
     "# Creating symbol layer\n",
     "vacc_layer = gmaps.symbol_layer(\n",
     "    loc, fill_color='rgba(0, 150, 0, 0.4)',\n",
-    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=3,\n",
+    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=2,\n",
     "    info_box_content=[f\"Number of people fully vaccinated: {vacc}\" for vacc in people_vacc]\n",
     ")\n",
     "\n",
@@ -224,6 +225,42 @@
     "# Display figure\n",
     "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b699d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)\n",
+    "\n",
+    "countries_geojson = gmaps.geojson_geometries.load_geometry('countries')\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "vacc_layer = gmaps.geojson_layer(countries_geojson)\n",
+    "fig.add_layer(vacc_layer)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f89fe27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(countries_geojson['features'][0]['properties']['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91db89a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
