clean code and folders

--- a/UK_Kenya_analysis.ipynb
+++ b/UK_Kenya_analysis.ipynb
@@ -11,11 +11,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from config import g_key\n",
-    "import pycountry\n",
-    "import requests\n",
-    "import json\n",
-    "import gmaps\n",
     "from scipy.stats import linregress"
    ]
   },
@@ -49,6 +44,7 @@
    "source": [
     "#selecting data only relevant to UK\n",
     "uk_covid=covid_data[covid_data[\"country\"]==\"UK\"]\n",
+    "uk_covid.to_csv(\"cleaned_data/UK_covid_data.csv\", index=False, header=True)\n",
     "uk_covid.head()"
    ]
   },
@@ -172,7 +168,7 @@
    "source": [
     "#selecting data relevant to Kenya from the main data frame\n",
     "kenya_covid=covid_data[covid_data[\"country\"]==\"Kenya\"]\n",
-    "kenya_covid.to_csv(\"Covid_Kenya.csv\", index=False, header=True)\n",
+    "kenya_covid.to_csv(\"cleaned_data/Kenya_covid_data.csv\", index=False, header=True)\n",
     "kenya_covid.head()"
    ]
   },
@@ -320,7 +316,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#selecting data only relevant to Kenya\n",
     "kenya_vaccine=vaccine_data[vaccine_data[\"country\"]==\"Kenya\"]\n",
+    "kenya_vaccine.to_csv(\"cleaned_data/Kenya_vaccination_data.csv\", index=False, header=True)\n",
     "kenya_covid=covid_data[covid_data[\"country\"]==\"Kenya\"]"
    ]
   },
@@ -452,6 +450,7 @@
     "uk_vaccination_df=pd.DataFrame({\"country\":\"UK\",\n",
     "                                \"date\":uk_merged3[\"date\"],\n",
     "                               \"daily vaccinations\":uk_daily_vacc[0]})\n",
+    "uk_vaccination_df.to_csv(\"cleaned_data/UK_vaccination_data.csv\", index=False, header=True)\n",
     "uk_vaccination_df.head()"
    ]
   },
