--- a/UK_Kenya_analysis.ipynb
+++ b/UK_Kenya_analysis.ipynb
@@ -540,6 +540,8 @@
     "daily_Vacc=uk_combined_timeframe[\"daily vaccinations\"]\n",
     "plt.scatter(time_uk, daily_Vacc, marker=\"o\", facecolors=\"red\", edgecolors=\"black\",alpha=0.75)\n",
     "plt.xticks(rotation=45)\n",
+    "plt.ylabel(\"Vaccination\")\n",
+    "plt.title(\"Vaccination over time in UK\")\n",
     "plt.savefig(\"images/uk_vaccination_over_time.png\")"
    ]
   }
