--- a/worldwide_vaccination(choropleth_map).ipynb
+++ b/worldwide_vaccination(choropleth_map).ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "6ba73c3b",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "656                           513793.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,6 +474,58 @@
     "countries_summary[\"Number of people fully vaccinated\"]=fully_vacc[\"people_fully_vaccinated\"]\n",
     "countries_summary.to_csv(\"cleaned_data/Worldwide_vaccination_summary.csv\", index=False, header=True)\n",
     "countries_summary.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "98a6445d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                              Gibraltar\n",
+       "ISO code                                   GIB\n",
+       "Population vaccinated                   114.86\n",
+       "Number of people fully vaccinated      38698.0\n",
+       "Name: 9029, dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#identifying the country with the highest percentaged of population fully vaccinated\n",
+    "countries_summary.loc[countries_summary[\"Population vaccinated\"].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8d9ca765",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                              Democratic Republic of Congo\n",
+       "ISO code                                                      COD\n",
+       "Population vaccinated                                         0.0\n",
+       "Number of people fully vaccinated                          2609.0\n",
+       "Name: 6062, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#identifying the country with the highest percentaged of population fully vaccinated\n",
+    "countries_summary.loc[countries_summary[\"Population vaccinated\"].idxmin()]"
    ]
   },
   {
